--- a/glvpckg/DESCRIPTION
+++ b/glvpckg/DESCRIPTION
@@ -8,7 +8,8 @@ Description: Provides tools for simulating Generalized Lotka-Volterra models, in
 License: GPL-3
 Imports:
     data.table (>= 1.15.4),
-    ids (>= 1.0.1)
+    ids (>= 1.0.1),
+    random (== 0.2.6)
 Suggests:
 RoxygenNote: 7.3.2
 Encoding: UTF-8
