--- a/glvpckg/NAMESPACE
+++ b/glvpckg/NAMESPACE
@@ -4,14 +4,19 @@ export(SS_diff_means_all)
 export(SS_find_and_save_all)
 export(SS_roll_window_all)
 export(forge_directories)
+export(forge_id)
 export(forge_seeds)
 export(individual_diff_means_SS)
 export(individual_rolling_window_SS)
 export(init_data)
-export(line_save)
+export(line_saver)
 export(output_saver)
 export(run_simulation)
 export(seed_saver)
+import(stats)
+import(utils)
 importFrom(data.table,fread)
 importFrom(ids,random_id)
+importFrom(miaSim,simulateGLV)
 importFrom(random,randomNumbers)
+importFrom(zoo,rollmean)
