--- a/glvpckg/NAMESPACE
+++ b/glvpckg/NAMESPACE
@@ -6,13 +6,13 @@ export(SS_roll_window_all)
 export(forge_directories)
 export(forge_id)
 export(forge_seeds)
-export(individual_diff_means_SS)
+export(individual_diff_SS)
 export(individual_rolling_window_SS)
 export(init_data)
-export(line_saver)
 export(output_saver)
+export(params_line_saver)
+export(params_seed_saver)
 export(run_simulation)
-export(seed_saver)
 import(stats)
 import(utils)
 importFrom(data.table,fread)
