--- a/glvpckg/NAMESPACE
+++ b/glvpckg/NAMESPACE
@@ -6,14 +6,21 @@ export(SS_roll_window_all)
 export(forge_directories)
 export(forge_id)
 export(forge_seeds)
+export(forge_tolerance)
+export(individual_SS_find_and_save)
 export(individual_diff_SS)
 export(individual_rolling_window_SS)
 export(init_data)
+export(load_individual_ss_rds)
 export(output_saver)
+export(output_visualizer)
 export(params_line_saver)
 export(params_seed_saver)
 export(run_simulation)
+import(ggplot2)
+import(plotly)
 import(stats)
+import(tidyr)
 import(utils)
 importFrom(data.table,fread)
 importFrom(ids,random_id)
