--- a/glvpckg/DESCRIPTION
+++ b/glvpckg/DESCRIPTION
@@ -7,13 +7,17 @@ Maintainer: Manuel Rivera <your.email@example.com>
 Description: Provides tools for simulating Generalized Lotka-Volterra models, including parameter generation, unique ID creation, result storage, and steady state detection.
 License: GPL-3
 Imports:
-    data.table (>= 1.15.4),
-    ids (>= 1.0.1),
+    data.table (>= 1.16.0),
+    ids (== 1.0.1),
     random (== 0.2.6),
     zoo (== 1.8.12),
     stats (== 4.4.1),
     utils (== 4.4.1),
-    miaSim (== 1.10.0)
+    miaSim (== 1.10.0),
+    ggplot2 (== 3.5.1),
+    tidyr (== 1.3.1),
+    plotly (== 4.10.4),
+    reshape2 (== 1.4.4)
 Suggests:
 RoxygenNote: 7.3.2
 Encoding: UTF-8
