Added individual-prop-SS code

--- a/glvpckg/NAMESPACE
+++ b/glvpckg/NAMESPACE
@@ -9,6 +9,7 @@ export(forge_seeds)
 export(forge_tolerance)
 export(individual_SS_find_and_save)
 export(individual_diff_SS)
+export(individual_prop_SS)
 export(individual_rolling_window_SS)
 export(init_data)
 export(load_individual_ss_rds)
