--- a/glvpckg/DESCRIPTION
+++ b/glvpckg/DESCRIPTION
@@ -17,7 +17,8 @@ Imports:
     ggplot2 (== 3.5.1),
     tidyr (== 1.3.1),
     plotly (== 4.10.4),
-    reshape2 (== 1.4.4)
+    reshape2 (== 1.4.4),
+    readr (== 2.1.5)
 Suggests:
 RoxygenNote: 7.3.2
 Encoding: UTF-8
