Fixed .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
-<<<<<<< HEAD
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
-*.Rproj
-0.0223771665006993
-=======
-*.log
-*.error
+# Ignore everything
+*
 
->>>>>>> f5fcafe4b6c0c88fe2dc00879120cd736221d69e
+# But not these files...
+!*.py
+!*.R
+!*.r
+!*.ipynb
+
+# And not directories (so we can recurse into them)
+!*/
